# entropy

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  config.sh  headers.sh  iso.sh  qemu.sh
kernel/: Makefile
kernel/arch/i386/: boot.s  crtn.s  gdt.c  gdt_asm.asm  hal.c  idt.c  idt_asm.s  interrupt.s  isrs.c  make.config  tty.c  vga.h
kernel/include/kernel/: gdt.h  hal.h  idt.h  isrs.h  tty.h
kernel/kernel/: kernel.cpp
libc/: CMakeLists.txt  Makefile
libc/assert/: assert.c
libc/include/: assert.h  stdio.h  stdlib.h  string.h
libc/include/sys/: cdefs.h
libc/stdio/: printf.c  putchar.c  puts.c
libc/stdlib/: abort.c  itoa.c
libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strcmp.c
libc/tests/: .gitignore  CMakeLists.txt  libctest.c  main.c
libc/tests/include/: libctest.h  string_test.h
libc/tests/string/: strcmp.c
